# chat-project

./: README.md  pyproject.toml
chatapp/: admin.py  consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
chatapp/migrations/: 0001_initial.py
core/: asgi.py  routing.py  settings.py  urls.py
