[project]
name = "chat-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Satyabrata Panda",email = "satyabrata.panda@webskitters.in"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
